# Praxis-Studio

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json
.distinction.example/graph/: edges.json  nodes.json
.distinction.example/memory/: changes.md  decisions.md
.distinction.example/rules/: ai-constraints.md
.github/workflows/: publish-desktop.yml
apps/runtime-cli/: package.json
apps/studio-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/studio-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/studio-desktop/src-tauri/capabilities/: default.json
apps/studio-desktop/src-tauri/src/: main.rs
docs/: AGENT_RUNTIME_SPEC.md  CLEAN_ROOM_BORROWING_SPEC.md  CODING_AGENT_ADAPTER_SPEC.md  DEVELOPMENT_GRAPH_SPEC.md  LOCAL_KNOWLEDGE_SPEC.md  MODEL_ROUTER_SPEC.md  PRODUCT_SPEC.md  PROJECT_CREATION_SPEC.md  PROJECT_INTAKE_SPEC.md  START.md  TAURI_DESKTOP_SPEC.md  V1_IMPLEMENTATION_PLAN.md
docs/agent-runtime/: 01-agent-session-and-loop.md  02-tool-runtime-and-permission.md  06-capability-roadmap.md  (+3 more)
scripts/: doctor-desktop.mjs  package-desktop-macos.mjs  package-desktop-windows.mjs  smoke-architecture-findings.mjs  smoke-codegraph-multilanguage.mjs  smoke-codegraph-provider.mjs  smoke-context-packet.mjs  smoke-foundation.mjs  smoke-mcp-foundation.mjs  smoke-mcp-readonly.mjs  smoke-native-intake-projection.mjs  smoke-open-existing-project.mjs  smoke-projected-graph-views.mjs  smoke-repository-understanding.mjs  smoke-self-intake.mjs  tauri-build-fixed.mjs  ui-preview-mock-server.mjs
(+119 files in other folders)
