[package]
name = "praxis-studio"
version = "0.1.0"
description = "Praxis Studio desktop host"
authors = ["Praxis Studio"]
edition = "2021"

[package.metadata.winresource]
ProductName = "Praxis Studio"
FileDescription = "Praxis Studio desktop host"
OriginalFilename = "Praxis Studio.exe"
LegalCopyright = "Copyright (c) Praxis Studio"

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
